Fixing z-index

--- a/frontend/src/Components/Registration/register-login.css
+++ b/frontend/src/Components/Registration/register-login.css
@@ -14,6 +14,10 @@
     z-index: 0;
 }
 
+.container {
+    z-index: 1;
+}
+
   .header {
     font-size: 24px;
     font-family: "Open Sans", sans-serif;
